--- a/index.html
+++ b/index.html
@@ -3,9 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Blog</title>
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/font/flaticon.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;500;700&family=Roboto+Slab:wght@300;500;700&family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+        <section class="header-icons">
+            <div class="icons-container">
+                <a href="#"><span class="flaticon-001-facebook"></span></a>
+                <a href="#"><span class="flaticon-002-twitter"></span></a>
+                <a href="#"><span class="flaticon-011-instagram"></span></a>
+                <a href="#"><span class="flaticon-010-linkedin"></span></a>
+                <a href="#"><span class="flaticon-008-youtube"></span></a>
+            </div>
+        </section>
+        <nav>
+            <section class="nav-logo-container">
+                <a href="#"><img src="https://i.imgur.com/WOYBiMZ.png" alt="Logo de My Blog"></a>
+            </section>
+            <section class="nav-profile-container">
+                <a href="./profile.html">Sobre mí</a>
+            </section>
+        </nav>
+    </header>
+    <main>
+
+    </main>
 </body>
 </html>
