--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>My Blog</title>
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/font/flaticon.css">
+    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/9385/9385702.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;500;700&family=Roboto+Slab:wght@300;500;700&family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
@@ -23,15 +24,16 @@
         </section>
         <nav>
             <section class="nav-logo-container">
-                <a href="#"><img src="https://i.imgur.com/WOYBiMZ.png" alt="Logo de My Blog"></a>
+                <a href="./index.html"><img src="https://i.imgur.com/WOYBiMZ.png" alt="Logo de My Blog"></a>
             </section>
             <section class="nav-profile-container">
                 <a href="./profile.html">Sobre mí</a>
             </section>
         </nav>
     </header>
-    <main>
-
+    <main class="home-main">
+        <h1 class="home-main-title">Conoce las novedades y noticias del Mundo Tech</h1>
+        <a href="./allBlogs.html" class="home-main-btn">¡Entra ya!</a>
     </main>
 </body>
 </html>
